--- a/Parcial1/trabajo en sesion/tabla.html
+++ b/Parcial1/trabajo en sesion/tabla.html
@@ -9,7 +9,7 @@
     <style>
         table {border: 2px solid red}
         tbody > tr:nth-of-type(odd) {background-color: blueviolet;}
-        td:active {background-color: black;}
+        td:active {background-color: white;}
         thead > tr {background-color: aqua;}
         tbody > tr:hover {background-color: brown;}
 
