--- a/Parcial1/MENU TARGET/MenuAcordeonClick.html
+++ b/Parcial1/MENU TARGET/MenuAcordeonClick.html
@@ -11,21 +11,21 @@
     
     <ul>
         
-        <li id="opc1" class="opcion"><a href="#opc1">Tacos</a>
+        <li id="opc1" class="opcion"><a href="#opc1"><strong> Tacos</strong></a>
             <ul>
                 <li class="subOpcion">Tacos de ternera</li>
                 <li class="subOpcion">Tacos de carne asada</li>
                 <li class="subOpcion">Tacos de chicharron</li>
             </ul>
         </li>
-        <li id="opc2" class="opcion"><a href="#opc2">Hamburguesas</a>
+        <li id="opc2" class="opcion"><a href="#opc2"><strong>Hamburguesas</strong></a>
             <ul>
                 <li class="subOpcion">Hamburguesa doble carne</li>
                 <li class="subOpcion">Hamburguesa de pollo</li>
                 <li class="subOpcion">Hamburguesa normal</li>
             </ul>
         </li>
-        <li id="opc3" class="opcion"><a href="#opc3">bebidas</a>
+        <li id="opc3" class="opcion"><a href="#opc3"><strong>Bebidas</strong></a>
             <ul>
                 <li class="subOpcion">Agua de horchata</li>
                 <li class="subOpcion">Agua de jamaica</li>
