--- a/Parcial2/Registro De Eventos/RegistroDeEventos.html
+++ b/Parcial2/Registro De Eventos/RegistroDeEventos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MediaQueries</title>
-    <link rel="stylesheet" href="MediaQueries.css">
+    <link rel="stylesheet" href="RegistroDeEvento.css">
 
 </head>
 <body>
