--- a/Parcial2/EventoDelegacion/EventoDelegacion.html
+++ b/Parcial2/EventoDelegacion/EventoDelegacion.html
@@ -9,23 +9,40 @@
 
 </head>
 <body>
-    <div id="idcont" class="contenedor">
-        <div id="caja1" class="caja">no me jala</div>
-        <div id="caja2" class="caja">caja2</div>
-        <div id="caja3" class="caja">caja3</div>
-        <div id="caja4" class="caja">caja4</div>
-        <div id="caja5" class="caja">caja5</div>
-        <div id="caja6" class="caja">caja6</div>
+    <!--la clase contenedor la dejare con el mismo nombre ya que lo saque de un ejercicio anterior(gridpop)-->  
+      
+    <div id="idjosue" class="contenedor">
+        <div id="caja1" class="caja" style="color: white;">color negro</div>
+        <div id="caja2" class="caja2" style="color: white;">color verde</div>
+        <div id="caja3" class="caja3" style="color: white;">color rosa</div>
+        <div id="caja4" class="caja4" style="color: white;">color azul</div>
+        <div id="caja5" class="caja5" style="color: white;">color naranja</div>
+        <div id="caja6" class="caja6" style="color: white;">color morado</div>
         
     </div>
         <script type="text/javascript">
 
-            var elem = document.getElementById("idcont");
+            var elem = document.getElementById("idjosue");
             elem.addEventListener("click",cambiarCaja);
             function cambiarCaja(evento) {
                 console.log(evento);
                 if (document.getElementById(evento.target.id).classList.contains("caja")) {
-                    document.getElementById(evento.target.id).classList.toggle("cajaAzul")
+                    document.getElementById(evento.target.id).classList.toggle("cambiarcolor")
+                }
+                if (document.getElementById(evento.target.id).classList.contains("caja2")) {
+                    document.getElementById(evento.target.id).classList.toggle("cambiarcolor2")
+                }
+                if (document.getElementById(evento.target.id).classList.contains("caja3")) {
+                    document.getElementById(evento.target.id).classList.toggle("cambiarcolor3")
+                }
+                if (document.getElementById(evento.target.id).classList.contains("caja4")) {
+                    document.getElementById(evento.target.id).classList.toggle("cambiarcolor4")
+                }
+                if (document.getElementById(evento.target.id).classList.contains("caja5")) {
+                    document.getElementById(evento.target.id).classList.toggle("cambiarcolor5")
+                }
+                if (document.getElementById(evento.target.id).classList.contains("caja6")) {
+                    document.getElementById(evento.target.id).classList.toggle("cambiarcolor6")
                 }
             }
         </script>
