--- a/Parcial2/Registro De Eventos/RegistroDeEventos.html
+++ b/Parcial2/Registro De Eventos/RegistroDeEventos.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    
+<!--hola jiji-->    
     <button id="caja1" onclick="alert('Click en Boton 1')">caja1</div>
     <button id="caja2" >caja2</div>
     <button id="caja3" >caja3</div>
