--- a/Parcial2/XMLHTTP/xmlhttp.html
+++ b/Parcial2/XMLHTTP/xmlhttp.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="xmlhttp.css"> 
 </head>
 <body>
-    <div id="headerdiv">Header jiji</div>
+    <div id="headerdiv">
 
     <button id="btnajax" type="button">Cambiar</button>
     <button id="btnreset" type="button">Regresar</button>
-
+    </div>
 
 
     <div id="idjosue" class="contenedor">
