--- a/Parcial2/AsyncAwait/FetchAsync.html
+++ b/Parcial2/AsyncAwait/FetchAsync.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="fetch.css">
+    <link rel="stylesheet" href="FetchAsync.css">
 </head>
 <body>
 
@@ -137,7 +137,7 @@
 
 
 
-    <script src="fetch.js"></script>
+    <script src="FetchAsync.js"></script>
     
 </body>
 </html>
